styles/helpers.css
/**
 * BlankPlate | Yet another HTML5 Starter Kit
 *
 * BlankPlate Helpers stylesheet
 *
 * @copyright	Copyright 2012, Dimitris Krestos
 * @license		Apache License, Version 2.0 (http://www.opensource.org/licenses/apache2.0.php)
 * @link		http://vdw.staytuned.gr
 * @package		BlankPlate
 * @version		v1.0
 */

/**
 * HELPERS
 * Some useful rules
 */
::-moz-selection {
	background: rgba(223, 61, 130, 0.3);
	color: #EEE;
}

::selection {
	background: rgba(223, 61, 130, 0.3);
	color: #EEEEEE;
}

.invisible {
	/* IE7- */
	opacity: 0; /* Chrome 4+, FF2+, Saf3.1+, Opera 9+, IE9, iOS 3.2+, Android 2.1+ */
		filter: alpha(opacity=0); /* IE6-IE8 */

	border: none;
	margin: 20px 0px;
}

.hide_text {
	color: transparent;
	text-indent: -999;
}

.ie {
	display: none;
}

/* Rule based on http://css3please.com/ */
.radius {
	-webkit-border-radius: 4px; /* Saf3-4, iOS 1-3.2, Android ≤1.6 */
	   -moz-border-radius: 4px; /* FF1-3.6 */
			border-radius: 4px; /* Opera 10.5, IE9, Saf5, Chrome, FF4, iOS 4, Android 2.1+ */

	/* useful if you don't want a bg color from leaking outside the border: */
	-moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;
}

/* Rule based on http://css3please.com/ */
.gradient {
	background-color: #F4F4F4;
	background-image: -webkit-gradient(linear, left top, left bottom, from(#FFF), to(#F4F4F4)); /* Saf4+, Chrome */
	background-image: -webkit-linear-gradient(top, #FFF, #F4F4F4); /* Chrome 10+, Saf5.1+, iOS 5+ */
	background-image:    -moz-linear-gradient(top, #FFF, #F4F4F4); /* FF3.6 */
	background-image:     -ms-linear-gradient(top, #FFF, #F4F4F4); /* IE10 */
	background-image:      -o-linear-gradient(top, #FFF, #F4F4F4); /* Opera 11.10+ */
	background-image:         linear-gradient(to bottom, #FFF, #F4F4F4);
}

/* Rule based on http://css3please.com/ */
.transition {
	-webkit-transition: all 0.6s ease 0s; /* Saf3.2+, Chrome */
	   -moz-transition: all 0.6s ease 0s; /* FF4+ */
		-ms-transition: all 0.6s ease 0s; /* IE10? */
		 -o-transition: all 0.6s ease 0s; /* Opera 10.5+ */
			transition: all 0.6s ease 0s;
}

/* Rule based on http://css3please.com/ */
.rgba {
	background-color: transparent;
	background-color: rgba(255, 255, 255, 0.6);  /* FF3+, Saf3+, Opera 10.10+, Chrome, IE9 */
			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66FFFFFF,endColorstr=#66FFFFFF); /* IE6–IE9 */
			zoom: 1;
}

.shadow {
	text-shadow: 1px 1px 1px #CCC;
}

.box_shadow {
	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
	padding: 12px 20px 2px;
}

.clear {
	clear: both;
	font-size: 1px;
	height: 0px;
	line-height: 0;
}

blockquote {
	border-left: 4px solid #EEEEEE;
	color: #666;
	margin-top: 10px;
	margin-bottom: 10px;
	margin-left: 20px;
	padding-left:20px
}

/* Based on Monokai scheme colors */
code {
	background-color: #F8F8F8;
	border: 1px solid #CCCCCC;
	color: #333333;
	font-family: Courier, 'Courier New', monospace;
	padding: 2px 4px;
}

code.monokai {
	background-color: #272822;
	color: #FB4383;
}

input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
	color: #C0C0C0;
}

input:-moz-placeholder, textarea:-moz-placeholder {
	color: #C0C0C0;
}

